[Fix] button on mobile responsive

--- a/src/style.scss
+++ b/src/style.scss
@@ -2,3 +2,8 @@
 /*
 ...
 */
+
+/*Fix Button on Mobile */
+.edit-post-pinned-plugins {
+    display: flex!important;
+}
